# zephyr

./: Kconfig.zephyr  west.yml
arch/: Kconfig
boards/arm/cmc10/: Kconfig.board  Kconfig.defconfig  board.cmake  cmc10.dts  cmc10.yaml  cmc10_defconfig  revision.cmake
boards/arm/cmc10_h723zg/: Kconfig.board  Kconfig.defconfig  board.cmake  cmc10_h723zg.dts  cmc10_h723zg.yaml  cmc10_h723zg_defconfig
boards/arm/nucleo_h743zi/: Kconfig.defconfig  nucleo_h743zi.dts  nucleo_h743zi_defconfig
cmake/: extensions.cmake
drivers/adc/: Kconfig.stm32  adc_context.h  adc_stm32.c
drivers/clock_control/: Kconfig.stm32  clock_stm32_ll_h7.c
drivers/display/: display_ili9341.h  display_ili9xxx.c
drivers/dma/: CMakeLists.txt  Kconfig.stm32  bdma_stm32.c  bdma_stm32.h  dma_stm32.c  dma_stm32.h  dma_stm32_v1.c  dmamux_stm32.c
drivers/ethernet/: Kconfig.dsa  eth_stm32_hal.c
drivers/flash/: CMakeLists.txt  Kconfig  Kconfig.stm32_qspi  flash_stm32_qspi.c  flash_stm32h7x.c  spi_nor.h
drivers/pwm/: pwm_stm32.c
drivers/serial/: Kconfig  Kconfig.stm32  uart_stm32.c  uart_stm32.h
drivers/spi/: spi_ll_stm32.c
dts/bindings/display/: ilitek,ili9341.yaml
dts/bindings/dma/: st,stm32-bdma.yaml
dts/bindings/ospi/: st,stm32-ospi.yaml
include/dfu/: mcuboot.h
include/drivers/: uart.h
include/toolchain/: gcc.h
samples/hello_bug/: CMakeLists.txt  prj.conf
samples/subsys/mgmt/mcumgr/smp_svr/: CMakeLists.txt  overlay-udp.conf  prj.conf
samples/subsys/mgmt/mcumgr/smp_svr/src/: main.c
scripts/: gen_relocate_app.py
subsys/logging/: Kconfig.formatting  log_output.c
(+55 files in other folders)
